user can add a new bookmark

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,3 +3,6 @@
     <li><a href=<%= bookmark.url %>><%= bookmark.title %></li>
   <% end %>
 </ul>
+<form method='get' action='/new'>
+<input value="New" type="submit"></input>
+</form>
